<resources>
    <string name="app_name">Smart tools</string>
    <string name="intro"> In a complex world, one toolbox is enough. </string>
    <string name="flash_on">" Turn on flash "</string>
    <string name="about_us">About us</string>
    <string name="front_flash">" Front flash "</string>
    <string name="life_advice">" Life advice"</string>
    <string name="forecast">" Forecast "</string>
    <string name="air_quality">Air quality</string>
    <string name="aqi_index">AQI index</string>
    <string name="pm2_5_index"> PM2.5 index</string>
    <string name="operation_method">" Operation method"</string>
    <string name="encryption">" Encryption "</string>
    <string name="empty">Clear</string>
    <string name="enter_content">" Input content"</string>
    <string name="deal_with">" Process"</string>
    <string name="result">" Result"</string>
    <string name="decrypt"> Decryption</string>
    <string name="set_frequency">" Set frequency"</string>
    <string name="cancel">" Cancel"</string>
    <string name="start">" Start"</string>
    <string name="option">Option</string>
    <string name="enter_url">" Input URL"</string>
    <string name="generate">" Generate"</string>
    <string name="http">http://</string>
    <string name="copy_result">" Copy results"</string>
    <string name="unit_cm"> Unit: cm</string>
    <string name="result_dots">" Result:"</string>
    <string name="smallest_integer">" Minimum integer "</string>
    <string name="maximum_integer">" Maximum integer "</string>
    <string name="enter_data_to_be_converted">" Enter the data that needs to be converted"</string>
    <string name="convert_to">" Converted to "</string>
    <string name="conversion">" Conversion "</string>
    <string name="name">Name</string>
    <string name="nickname_title">Nickname/title</string>
    <string name="mobile_phone_number">" Mobile phone number"</string>
    <string name="address">" Address"</string>
    <string name="email">" Mailbox"</string>
    <string name="company">Company</string>
    <string name="home_page">" Personal homepage"</string>
    <string name="content">" Content"</string>
    <string name="clear_text"> Plain text content</string>
    <string name="get">Get</string>
    <string name="file_address">" File address"</string>
    <string name="file_download_address"> File download address:</string>
    <string name="parse">" Parse "</string>
    <string name="share">" Share"</string>
    <string name="save">" Save"</string>
    <string name="sample_email">djzhao627@gmail.com</string>
    <string name="operation_hint"> Operation tips: Long press to delete items, click the upper right corner to add items. </string>
    <string name="long_press_to_delete_this_item">" Long press to delete this item"</string>
    <string name="hello_there">" Hello "</string>
    <string name="no_content_list"> There is currently no content in the list, please click the button in the upper right corner to add it. </string>
    <string name="add_item">" Add item"</string>
    <string name="title">Project name</string>
    <string name="add_to">" Add"</string>
    <string name="select_category">" Select category"</string>
    <string name="help_me_choose"> Help me choose</string>
    <string name="help_and_about">" Help and about"</string>
    <string name="development_and_support">" Development and support"</string>
    <string name="developer_this_program">The developer of this program</string>
    <string name="three_dots">. . . </string>
    <string name="feedback_and_contact">" Feedback and contact"</string>
    <string name="email_me">Send me an email</string>
    <string name="contact_author">Contact the author</string>
    <string name="open_source_project_used">" The open source project used"</string>
    <string name="about_author">About author</string>
    <string name="delete_prompt">"Delete prompt "</string>
    <string name="are_you_sure_you_want_to_delete">"Are you sure you need to delete: "</string>
    <string name="yes_delete"> Yes, delete </string>
    <string name="management">"Management "</string>
    <string name="no_category_content">There is no content under this category, please add content</string>
    <string name="github_file_address_resolution">Github file address resolution</string>
    <string name="the_result_has_been_copied_to_the_clipboard">The result has been copied to the clipboard</string>
    <string name="please_enter_address_first">Please enter the file address first</string>
    <string name="incorrect_file_address">The file address is incorrect</string>
    <string name="the_source_code_has_been_copied_to_the_clipboard">Source code has been copied to the clipboard</string>
    <string name="web_source_code_acquisition">"Web source code acquisition "</string>
    <string name="please_enter_url_first">Please enter the URL first</string>
    <string name="need_to_enter_protocol_and_url">Need to enter the protocol + URL</string>
    <string name="obtain_the_source_code_please_wait">Obtain the source code, please wait...</string>
    <string name="something_went_wrong">Something went wrong, the source code could not be obtained</string>
    <string name="morse_code">Morse code</string>
    <string name="business_card_qr_code">Business card/ QR code</string>
    <string name="you_can_not_use_this_feature_without_authorization">You cannot use this feature without authorization</string>
    <string name="base_conversion">"Base conversion "</string>
    <string name="the_data_is_abnormal_and_can_not_be_parsed">The data is abnormal and cannot be parsed</string>
    <string name="illegal_input">Illegal input</string>
    <string name="this_minumim_seems_to_be_larger_than_maximum">The minimum value seems to be larger than the maximum value</string>
    <string name="screen_infomation">"Screen information "</string>
    <string name="width">width</string>
    <string name="height">high</string>
    <string name="short_url_generation">Short URL generation</string>
    <string name="generating_please_wait">Generating, please wait...</string>
    <string name="network_abnormaly">"Network abnormal "</string>
    <string name="your_phone_has_no_flash_enable_screen_flash_mode">" your phone does not have a flash!  Enable screen flashlight mode!"</string>
    <string name="the_program_can_not_run_normally">Program cannot run normally</string>
    <string name="encode_decode">Encode/decode</string>
    <string name="comfort">"Comfort: "</string>
    <string name="car_wash_index">Car wash index:</string>
    <string name="exercise_recommendations">"Exercise recommendations: "</string>
    <string name="failed_to_get_weather_information">Failed to obtain weather information</string>
    <string name="about_toolbox">About a toolbox</string>
    <string name="no_email_program">No mail program</string>
    <string name="are_you_sure_to_exit">"Are you sure you need to exit? "</string>
    <string name="yes">OK</string>
    <string name="daily_word_hint">"The price you pay every day is higher than the day before, because your life is shorter by another day, so you must be more attentive every day. "</string>
    <string name="weather">Weather</string>
    <string name="flash_light">Flashlight</string>
    <string name="ruler">Ruler</string>
    <string name="get_web_source_code">Webpage source code acquisition</string>
    <string name="random_number_generation">Random number generation</string>
    <string name="difficulty_in_choice">Choice Difficulties</string>
    <string name="content_can_not_be_empty">"Content cannot be empty "</string>
    <string name="share_qrcode_to">"Share the QR code to "</string>
    <string name="has_been_saved_to">Has been saved to:</string>
    <string name="name_can_not_be_empty">Name cannot be empty</string>
    <string name="mobile_phone_can_not_be_empty">Mobile phone number cannot be empty</string>
    <string name="please_enter_text_first">Please enter the text first</string>
    <string name="failed_to_load">Failed to load</string>
    <string name="loading">Loading…</string>
    <string name="random_number">Random number</string>
    <string name="transcoding">↓ Transcoding</string>
    <string name="decoding">↑ Decoding</string>
    <string name="business_card">Business card</string>
    <string name="custom_qr_code">Custom QR code</string>
</resources>
